Collaps fix

--- a/jstasks20.github.io/css/style.less
+++ b/jstasks20.github.io/css/style.less
@@ -15,10 +15,16 @@
 }
 .form-group {
   .collapse-triger {
+    b {
+      cursor: pointer;
+    }
     i {
       transition: all 200ms linear;
       margin-left: 10px;
       transform: rotate(180deg);
+      :hover {
+        cursor: pointer;
+      }
     }
   }
 }
